lab1/Test/L1-A-8-49.cmm
int ;
int z 
;
struct Oxk3sVuNXg cyFztbz ( ) {
  int nTA0IWftvnuF ;
  struct ivePBmGCzmXRG_dOD {
<   }Huf0Di9_7LaAF , h_MlF6mxpsVhdIXO2n7 ;
  if ( jPMiF )   while ( PVERAGj_aQD7Tt5iJS )   return 
    iT4Iwlilo_ ;

else   if ( Du )   if ( sekSQ ) {
    float zE5f1gCRBAsHnZ = else lTNQRT0wcK4xqmSCB 
      ;
  }else   z6 && serRY5rxRwekX * ! DwyHXPgpg1okMo9m632Y 
    [ Jvhq9oOuvp = wVIp || xQOKLwTLsFpG1 1361406274.1631263332 
    <= mgGNt2GvU2rdrCkc - LhV8pyc5jxksm9w / - - McOG ( 
    U8tRyRwF , oLuw9eVU != - ( GUO7ezkGsiCW = CY3ncOqyRw4NH 
    < tSnKTmLzR5VR + - YzRoH ( x3O3LiTZV3NY || rvSIex4 
    >= N * - ! COeXJOED [ cdZllUzJ8ec > ! eMMU4d [ unl9pj4C 
    || Uwdiixb5Ga8 == NoNBI1pu4263hrL ] . FFz - TFp00qyIFg3r 
    ] . X6x2WymC5 - 989755196.856070912 ) ) + 1148939092 
    ) + - f_l8CJbfW4 ( ) ] . d2jNAu4H58Apuw_0WrFU ;



}
struct bI17De ;
int DH0BtvVntonfQSJAW [ 1979195127 ] , T_un3r2V 

;
int ;
int ;
struct {
  struct qqkj8_Meutk9w yzs35xEyym ;
};
int ;
int ;
int HiZyfEeEBI2n_x ( int SnYouioCjPlqWitqP , int NcYShpUsx5OUExO0 
  ) else {
}
